# teach-geometric-optimization

./: .gitignore  CMakeLists.txt  README.md
models/: cow.off
source/: hello.cpp  main.cpp  model_path.h
source/editor/tools/: plane_positioning.cpp  ruffle_optimizer.cpp  tool_selector.cpp
source/ruffle/: ruffle.cpp
source/simulation/: lbfgs.cpp
